# OpenCLNeuralNetwork

./: .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE  README.md  USAGE.md  Vruntests.bat  build.bat  build.sh  debugsetup.bat  rebuild.bat  run.bat  run.sh  rundebug.bat  runtests.bat  runtests.sh  setup.bat  setup.sh
.github/workflows/: ci.yml
data/Regression/: test_regression1.csv
data/XOR/: xor_data.csv
include/: LayerGPU.hpp  NeuralNetwork.hpp  OpenCLSetup.hpp
include/DataLoader/: AllDataLoaders.hpp
include/DataLoader/CSVNumerical/: CSVNumericalLoader.hpp
include/DataLoaders/: AllDataLoaders.hpp  DataLoader.hpp
include/DataLoaders/BinImage/: BinImageDataLoader.hpp
include/DataLoaders/CSVNumerical/: CSVNumericalLoader.hpp
include/DataProcessor/: AllDataProcessors.hpp  DataProcessor.hpp
include/DataProcessor/CSVNumerical/: CSVNumericalProcessor.hpp
include/Layer/: AllLayers.hpp  Layer.hpp  TrainableLayer.hpp
include/Layer/Convolutional/: ConvolutionalLayer.hpp
include/Layer/Dense/: DenseLayer.hpp
include/Layers/: AllLayers.hpp  Layer.hpp
include/Layers/ActivationLayers/: ActivationLayer.hpp
include/Layers/ActivationLayers/PreActivationLayers/: PreActivationLayer.hpp
include/Layers/ActivationLayers/PreActivationLayers/LeakyReLU/: LeakyReLULayer.hpp
include/Layers/ActivationLayers/PreActivationLayers/ReLU/: ReLULayer.hpp
include/Layers/ActivationLayers/Sigmoid/: SigmoidLayer.hpp
include/Layers/ActivationLayers/Softmax/: SoftmaxLayer.hpp
include/Layers/ActivationLayers/Tanh/: TanhLayer.hpp
include/Layers/TrainableLayers/: TrainableLayer.hpp
include/Layers/TrainableLayers/Convolutional/: ConvolutionalLayer.hpp
include/Layers/TrainableLayers/Dense/: DenseLayer.hpp
include/LossFunctions/: AllLossFunctions.hpp  LossFunction.hpp
include/LossFunctions/BinaryCrossEntropy/: BinaryCrossEntropy.hpp
include/LossFunctions/CategoricalCrossEntropy/: CategoricalCrossEntropy.hpp
include/LossFunctions/MeanSquaredError/: MeanSquaredError.hpp
include/LossFunctions/SoftmaxCrossEntropy/: SoftmaxCrossEntropy.hpp
include/NeuralNetwork/: NeuralNetwork.hpp
include/NeuralNetworks/: NeuralNetwork.hpp
include/NeuralNetworks/Local/: LocalNeuralNetwork.hpp
include/Optimizer/: AllOptimizers.hpp  Optimizer.hpp
include/Optimizer/Adam/: AdamOptimizer.hpp
include/Optimizer/AdamW/: AdamWOptimizer.hpp
include/Optimizer/SGD/: SGDOptimizer.hpp
include/Optimizers/: AllOptimizers.hpp  Optimizer.hpp
include/Optimizers/AdamBaseOptimizers/: AdamBaseOptimizer.hpp
include/Optimizers/AdamBaseOptimizers/Adam/: AdamOptimizer.hpp
include/Optimizers/AdamBaseOptimizers/AdamW/: AdamWOptimizer.hpp
include/Optimizers/SGD/: SGDOptimizer.hpp
include/Utils/: ActivationType.hpp  Batch.hpp  Dimensions.hpp  EventProfiler.hpp  FilterDimensions.hpp  LayerArgs.hpp  LayerConfig.hpp  LayerType.hpp  LossFunctionArgs.hpp  LossFunctionType.hpp  NetworkArgs.hpp  NetworkConfig.hpp  NetworkType.hpp  OpenCLResources.hpp  OpenCLSetup.hpp  OptimizerArgs.hpp  OptimizerConfig.hpp  OptimizerType.hpp  PaddingType.hpp  PaddingValues.hpp  PolicyBatch.hpp  StrideDimensions.hpp
kernels/: kernels.cl
kernels/Layer/Convolutional/: ConvolutionalLayerKernels.cl
kernels/Layer/Dense/: DenseLayerKernels.cl
kernels/Layers/Activation/: ActivationBackwardKernels.cl  ActivationForwardKernels.cl
kernels/Layers/Trainable/: AverageGradientsKernels.cl  BiasKernels.cl  ConvolutionalLayerKernels.cl
kernels/Layers/Utils/: ConvolutionalTransforms.cl
kernels/LossFunctions/: LossFunctionsKernels.cl
kernels/NeuralNetwork/: NeuralNetworkKernels.cl
kernels/Optimizer/Adam/: AdamOptimizerKernels.cl
kernels/Optimizer/AdamW/: AdamWOptimizerKernels.cl
kernels/Optimizer/SGD/: SGDOptimizerKernels.cl
kernels/Optimizers/: OptimizersKernels.cl
kernels/Optimizers/AdamW/: AdamWOptimizerKernels.cl
kernels/Optimizers/SGD/: SGDOptimizerKernels.cl
kernels/include/: HelperFunctions.clh
src/: LayerGPU.cpp  NeuralNetwork.cpp  OpenCLSetup.cpp  main.cpp
src/DataLoader/: DataLoader.cpp
src/DataLoader/CSVNumerical/: CSVNumericalLoader.cpp
src/DataLoaders/: DataLoader.cpp
src/DataLoaders/BinImage/: BinImageDataLoader.cpp
src/DataLoaders/CSVNumerical/: CSVNumericalLoader.cpp
src/DataProcessor/: DataProcessor.cpp
src/DataProcessor/CSVNumerical/: CSVNumericalProcessor.cpp
src/Layer/Convolutional/: ConvolutionalLayer.cpp
src/Layer/Dense/: DenseLayer.cpp
src/Layers/ActivationLayers/PreActivationLayers/LeakyReLU/: LeakyReLULayer.cpp
src/Layers/ActivationLayers/PreActivationLayers/ReLU/: ReLULayer.cpp
src/Layers/ActivationLayers/Sigmoid/: SigmoidLayer.cpp
src/Layers/ActivationLayers/Softmax/: SoftmaxLayer.cpp
src/Layers/ActivationLayers/Tanh/: TanhLayer.cpp
src/Layers/TrainableLayers/Convolutional/: ConvolutionalLayer.cpp
src/Layers/TrainableLayers/Dense/: DenseLayer.cpp
src/LossFunctions/BinaryCrossEntropy/: BinaryCrossEntropy.cpp
src/LossFunctions/CategoricalCrossEntropy/: CategoricalCrossEntropy.cpp
src/LossFunctions/MeanSquaredError/: MeanSquaredError.cpp
src/LossFunctions/SoftmaxCrossEntropy/: SoftmaxCrossEntropy.cpp
src/NeuralNetwork/: NeuralNetwork.cpp
src/NeuralNetworks/Local/: LocalNeuralNetwork.cpp
src/Optimizer/Adam/: AdamOptimizer.cpp
src/Optimizer/AdamW/: AdamWOptimizer.cpp
src/Optimizer/SGD/: SGDOptimizer.cpp
src/Optimizers/AdamBaseOptimizers/Adam/: AdamOptimizer.cpp
src/Optimizers/AdamBaseOptimizers/AdamW/: AdamWOptimizer.cpp
src/Optimizers/SGD/: SGDOptimizer.cpp
src/Utils/: Dimensions.cpp  EventProfiler.cpp  LayerArgs.cpp  LayerConfig.cpp  LossFunctionArgs.cpp  NetworkArgs.cpp  NetworkConfig.cpp  OpenCLResources.cpp  OpenCLSetup.cpp  OptimizerArgs.cpp  OptimizerConfig.cpp
tests/: CMakeLists.txt
tests/Layers/TrainableLayers/: ConvDenseIntegrationTest.cpp  ConvolutionalLayerTest.cpp  DenseLayerTest.cpp
tests/Utils/: OpenCLResourcesTest.cpp
